--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,292 @@
+h1 {
+  text-align: center;
+  font-family: Georgia;
+  padding: 30px;
+}
+h2 {
+  text-align: center;
+  background-color: #01d28e;
+  padding: 20px;
+  margin: -10px;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url("bg.jpg");
+  background-size: 100%;
+}
+.my-menu {
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 0px;
+}
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  height: 400px;
+  font-family: Georgia;
+  /* background-color: #f8f9fd; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.button {
+  font-family: Georgia;
+  cursor: pointer;
+  font-size: 15px;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 0px;
+  width: 100%;
+  transition-property: none;
+}
+.SignUp {
+  text-decoration: none;
+  color: #fff;
+}
+.button:hover {
+  background: #6cf0c2;
+}
+
+/* input[type="text"],
+input[type="password"] {
+  height: 25px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+} */
+
+/* .select-container {
+  position: relative;
+  height: 30px;
+  display: block;
+  font-size: 20px;
+  border: 5px;
+  text-align: center;
+  padding-top: 20px;
+  font-family: Georgia;
+} */
+input[type="text"],
+input[type="password"] {
+  width: 250px;
+  text-align: center;
+  margin-right: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  background: #f1f1f1;
+  border: solid 1px;
+  border-color: gray;
+  font-size: 15px;
+}
+label {
+  font-family: Georgia;
+  /* background-color: white; */
+}
+input[type="submit"] {
+  margin-top: 30px;
+  cursor: pointer;
+  font-size: 15px;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #ffffff;
+  padding: 10px 20px;
+  font-family: Georgia;
+}
+.SignUpText {
+  width: 300px;
+  margin-left: 10px;
+  padding: 0;
+  /* background: white; */
+  border: solid 1px;
+  border-color: grey;
+}
+
+.DOB {
+  padding-right: 200px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.label-1 {
+  font-family: Georgia;
+  /* padding-top: 10px; */
+  padding-right: 200px;
+}
+
+.form-select {
+  width: 250px;
+  height: 30px;
+  /* margin-left: px; */
+}
+.SignUph2 {
+  font-family: Georgia;
+  font-size: 20px;
+  text-align: center;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #fff;
+  padding: 15px;
+  margin: -10px;
+  width: 550px;
+}
+.select {
+  padding: 10px;
+}
+
+h3 {
+  background: #01d28e;
+  font-size: 14px;
+  text-align: center;
+  padding: 6px;
+  /* width: 550px; */
+  margin: -10px;
+}
+.SignUP-P-h3 {
+  /* margin-left: -12px; */
+  width: 550px;
+}
+.SignUP-P-heading {
+  margin-left: 10px;
+}
+.heading {
+  margin-left: auto;
+}
+.heading-H {
+  margin-left: auto;
+}
+.SignUP-H-h3 {
+  /* margin-left: -12px; */
+}
+input[type="submit"]:hover {
+  background: #6cf0c2;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+.button-container1 {
+  margin-left: 35%;
+}
+
+.form {
+  align-items: center;
+}
+.login-form {
+  font-family: Georgia;
+  align-items: center;
+  /* background-color: rgb(22, 21, 19); */
+  padding: 2rem;
+  padding: 10px;
+  height: 300px;
+  width: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form1 {
+  font-family: Georgia;
+  align-self: center;
+  padding: 2rem;
+  padding: 10px;
+  height: 400px;
+  margin-top: 30px;
+  width: 350px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form2 {
+  font-family: Georgia;
+  align-self: center;
+  padding: 2rem;
+  padding: 10px;
+  margin-top: 30px;
+  width: 350px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  height: 445px;
+}
+
+.signup-form {
+  font-family: Georgia;
+  align-self: center;
+  /* padding: 2rem;
+  padding: 10px; */
+  height: 935px;
+  margin-top: 450px;
+  width: 550px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.signup-form-Hosp {
+  font-family: Georgia;
+  align-self: center;
+  padding: 2rem;
+  padding: 10px;
+  height: 550px;
+  margin-top: 30px;
+  width: 400px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.input-container {
+  display: flex;
+  flex-direction: column;
+  /* gap: 2px; */
+  margin: 10px;
+}
+.input-container1 {
+  margin-top: 30px;
+  margin-left: 30px;
+  padding: 5px;
+  /* align-items: center; */
+}
+
+.input-container-2 {
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-bottom: 1%;
+  padding: 10px;
+}
+
+p {
+  font-family: Georgia;
+  font-size: 14px;
+  padding-top: 5px;
+  text-align: center;
+}
+.dropdown {
+  text-align: center;
+  margin-top: 90px;
+}
+#dropdownMenuButton {
+  background-color: rgb(7, 197, 200);
+  color: white;
+}
+.signin {
+  padding: 2px;
+  margin-right: 10px;
+}
+.anchor {
+  font-size: 15px;
+  font-family: Georgia;
+  padding: 5px;
+  text-align: center;
+  color: black;
+}
+.anchor1 {
+  text-align: center;
+  padding: 10px;
+  margin-top: 70px;
+}
+.SigninforHospital {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 450px;
+  font-family: Georgia;
+
+  /* padding-bottom: 10px; */
+}
+
+.SignupforHospital {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 450px;
+  font-family: Georgia;
 }
